fancy uploader for you, jerk!

--- a/app/views/root/submit.html.erb
+++ b/app/views/root/submit.html.erb
@@ -15,22 +15,18 @@
 	  <div id="frame">
       <%= form_for PhotoSet.new, :html => {:multipart => true} do |f| %>
         <div id="picture_title_l">
-        <%= f.label :photo_1, 'Picture 1'%>
           <div id="browse_l">
             <span class="file-wrapper">
-              <input type="file" name="photo_set[photo_1]" id="photo_set_photo_1" class="photo_set_photo_file_field" onchange="readURL(this, $('#upload_photo_1'));" />
-              <span class="button">BROWSE</span>
-              <img id="upload_photo_1" src="#" alt="upload_photo_1" />
+              <input type="file" name="photo_set[photo_1]" id="photo_set_photo_1" class="photo_set_photo_file_field" onchange="readURL(this, $('.photo_set_photo_1_button'));" />
+              <span class="button photo_set_photo_1_button"></span>
             </span>
           </div>
         </div>
           <div id="picture_title_r">
-            <%= f.label :photo_2, 'Picture 2' %><br />
             <div id="browse_r">
               <span class="file-wrapper">
-                <input type="file" name="photo_set[photo_2]" id="photo_set_photo_2" class="photo_set_photo_file_field" onchange="readURL(this, $('#upload_photo_2'));" />
-                <span class="button">BROWSE</span>
-                <img id="upload_photo_2" src="#" alt="upload_photo_2" />
+                <input type="file" name="photo_set[photo_2]" id="photo_set_photo_2" class="photo_set_photo_file_field" onchange="readURL(this, $('.photo_set_photo_2_button'));" />
+                <span class="button photo_set_photo_2_button"></span>
               </span>
             </div>
           </div>
@@ -51,7 +47,6 @@
             <%= link_to 'terms & conditions', terms_url, :id => 'submit_link', :class => 'fancybox fancybox.ajax' %>
           </div>
         </div>
-
 
     <% end %>
 
