--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -61,9 +61,9 @@
 	z-index:3;background-image:url("../images/home_btn.png");
 	height:29px;width:133px;
 	background-repeat:no-repeat;
- -webkit-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.2);
-    box-shadow:      0 8px 6px -6px rgba(0, 0, 0, 0.2);
+ -webkit-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.1);
+    box-shadow:      0 8px 6px -6px rgba(0, 0, 0, 0.1);
 	}
 
 #tab-home:active {
@@ -72,9 +72,9 @@
 	z-index:3;background-image:url("../images/home_btn.png");
 	height:29px;width:133px;
 	background-repeat:no-repeat;
- 		-webkit-box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 0.2);
-		-moz-box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 0.2);
-		box-shadow:      0 6px 6px -6px rgba(0, 0, 0, 0.2);
+ 		-webkit-box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 0.1);
+		-moz-box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 0.1);
+		box-shadow:      0 6px 6px -6px rgba(0, 0, 0, 0.1);
 	}
 
 
@@ -96,9 +96,9 @@
 	height:29px;
 	width:133px;
 	background-repeat:no-repeat;
-	-webkit-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.2);
-    box-shadow:      0 8px 6px -6px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.1);
+    box-shadow:      0 8px 6px -6px rgba(0, 0, 0, 0.1);
 	}
 
 #tab-submit:active {
@@ -109,9 +109,9 @@
 	height:29px;
 	width:133px;
 	background-repeat:no-repeat;
- -webkit-box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 0.2);
-    box-shadow:      0 6px 6px -6px rgba(0, 0, 0, 0.2);
+ -webkit-box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 0.1);
+    box-shadow:      0 6px 6px -6px rgba(0, 0, 0, 0.1);
 	}
 
 #tab-how-to {
@@ -132,9 +132,9 @@
 	height:29px;
 	width:133px;
 	background-repeat:no-repeat;
-	-webkit-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.2);
-    box-shadow:      0 8px 6px -6px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.1);
+    box-shadow:      0 8px 6px -6px rgba(0, 0, 0, 0.1);
 	}
 
 #tab-how-to:active {
@@ -145,9 +145,9 @@
 	height:29px;
 	width:133px;
 	background-repeat:no-repeat;
-	-webkit-box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 0.2);
-	    -moz-box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 0.2);
-	    box-shadow:      0 6px 6px -6px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 0.1);
+	    -moz-box-shadow: 0 6px 6px -6px rgba(0, 0, 0, 0.1);
+	    box-shadow:      0 6px 6px -6px rgba(0, 0, 0, 0.1);
 	}
 
 .tab-root-index #tab-home {
@@ -419,7 +419,7 @@ input[type="submit"] {
 }
 
 .button {
-	background:white;
+	background:url(../images/button.png);
   cursor: pointer;
   display: block;
   height: 119px;
